welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:6: error: not found: value R
   if (litMessage() == R) {
                       ^BDRBuggle:9: error: not found: value L
   } else if (litMessage() == L) {
                              ^BDRBuggle:12: error: not found: value I
   } else if (litMessage() == I) {
                              ^BDRBuggle:16: error: not found: value A
   } else if (litMessage() == A) {
                              ^BDRBuggle:18: error: not found: value B
   } else if (litMessage() == B) {
                              ^BDRBuggle:20: error: not found: value C
   } else if (litMessage() == C) {
                              ^BDRBuggle:22: error: not found: value Z
   } else if (litMessage() == Z) {
                              ^BDRBuggle:24: error: not found: value Y
   } else if (litMessage() == Y) {
                              ^BDRBuggle:26: error: not found: value X
   } else if (litMessage() == X) {
                              ^